--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -22,6 +22,7 @@
         android:layout_width="69dp"
         android:layout_height="74dp"
         android:layout_marginTop="15dp"
+        android:tooltipText="Take picture"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewCamera"
